@@ -146,6 +146,8 @@ in a negative namespace (which is invalid).
   are now checked when loading Special:Upload. Toolbar link for Special:Upload
   is no longer shown if the user does not have the required permissions.
 * (Bug 23397) texvc in html mode renders \sim as &tilde; not &sim;
+* (Bug 23241) Remove License selector, because it is not used when uploading a
+  new version.
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent
